change data structure of StorageData from Tree to Queue and integrate it in many places