@@ -4,8 +4,9 @@ import java.awt.Dimension;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import be.cytomine.appengine.handlers.StorageData;
+import be.cytomine.appengine.handlers.StorageDataEntry;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -14,7 +15,6 @@ import be.cytomine.appengine.dto.inputs.task.types.image.ImageTypeConstraint;
 import be.cytomine.appengine.dto.inputs.task.types.image.ImageValue;
 import be.cytomine.appengine.dto.responses.errors.ErrorCode;
 import be.cytomine.appengine.exceptions.TypeValidationException;
-import be.cytomine.appengine.handlers.FileData;
 import be.cytomine.appengine.models.task.Output;
 import be.cytomine.appengine.models.task.ParameterType;
 import be.cytomine.appengine.models.task.Run;
@@ -77,7 +77,7 @@ public class ImageType extends Type {
         List<FileFormat> checkers = formats
                 .stream()
                 .map(ImageFormatFactory::getFormat)
-                .collect(Collectors.toList());
+                .toList();
 
         this.format = checkers
                 .stream()
@@ -179,13 +179,13 @@ public class ImageType extends Type {
     }
 
     @Override
-    public FileData mapToStorageFileData(JsonNode provision, String charset) {
+    public StorageData mapToStorageFileData(JsonNode provision, String charset) {
         String parameterName = provision.get("param_name").asText();
         byte[] inputFileData = null;
         try {
             inputFileData = provision.get("value").binaryValue();
         } catch (IOException ignored) {}
-        return new FileData(inputFileData, parameterName);
+        return new StorageData(new StorageDataEntry(inputFileData, parameterName));
     }
 
     @Override
